# excel_translate

./: .gitignore  README.md  main.py  pyproject.toml  test.ipynb
excel_translate/: ai_utils.py  config.json  excel_opreations.py  excel_translation_check.py  main.py
tests/: test_translate_data.py
tests/test_files/: output.xlsx  test_1.xlsx
